# clubem

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  vercel.json
engine/: README.md  pyproject.toml
engine/data/jobs/: 3fcfc045-b6e8-40ce-8a6a-f49ac5236e1b.json  65205e3f-bcb0-4969-8055-32034fceaa0d.json  747b9e51-22ff-4ca7-8153-fd362226614c.json  79a6bd82-618e-41f7-94de-48e1cb87fa2e.json  79f019a8-4199-480e-860d-2d2e7eda0e1f.json  7a1b8409-c70d-4113-b922-6d77444299bb.json  7b5bbfc4-b598-4170-a5d5-d34ee19c6207.json  a2775758-d4d5-4f1e-bbb8-9c03bf523a92.json  af79e1d7-c927-41fe-a8bc-57745c27e35b.json  b28b1b78-d1c9-4fc7-9d7b-d417a5be90ac.json  c4d0c104-0fa5-44f2-aebc-f09187011a65.json  ddda19ca-d01d-42ee-b468-ed62f5a67b11.json  e1e5fa7f-586b-4b9b-83be-37d820199ba0.json  ea26e7c8-b3b7-46f6-87c8-bd0f882b50d9.json  eb36ecfe-100b-4faf-84b6-0ed9cde8b973.json
engine/schemas/: SCHEMA_GUIDE.md  catercow.json  clubfeast.json  ezcater.json  forkable.json  grubhub.json  hungry.json  sharebite.json
engine/scripts/: dev_run.ps1  dev_run.sh  run_flask_dev.py  run_worker.py  seed_schemas.py
engine/src/api/: app.py  routes.py
engine/src/domain/: __init__.py  errors.py  models.py
engine/src/export/: __init__.py  excel_export.py  json_export.py  utils.py
engine/src/llm/: __init__.py  graph.py  prompts.py  validators.py
engine/src/parsing/: __init__.py  parser.py  platform_detect.py  schema_loader.py  text_extract.py
engine/src/registry/: __init__.py  filesystem.py  paths.py  (+1 more)
engine/tests/: __init__.py  test_api.py  test_detection.py  test_parser.py
(+129 files in other folders)
